Project-3-Antlr-main/antlr_generated/tigerParser.java
// Generated from tiger.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class tigerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, ARRAY=2, BREAK=3, DO=4, IF=5, ELSE=6, FOR=7, FUNCTION=8, LET=9, 
		IN=10, OF=11, THEN=12, TO=13, VAR=14, WHILE=15, ENDIF=16, BEGINKW=17, 
		END=18, ENDDO=19, RETURN=20, INT=21, FLOAT=22, PLUS=23, MINUS=24, MULT=25, 
		DIV=26, EQ=27, NEQ=28, LT=29, GT=30, LE=31, GE=32, AND=33, OR=34, ASSIGN=35, 
		COMMA=36, COLON=37, SEMI=38, LPAREN=39, RPAREN=40, LBRACK=41, RBRACK=42, 
		FLOATLIT=43, INTLIT=44, ID=45, COMMENT=46, WS=47;
	public static final int
		RULE_tiger_program = 0, RULE_declaration_segment = 1, RULE_var_declaration_list = 2, 
		RULE_var_declaration = 3, RULE_optional_init = 4, RULE_const_value = 5, 
		RULE_id_list = 6, RULE_type = 7, RULE_type_id = 8, RULE_funct_declaration_list = 9, 
		RULE_funct_declaration = 10, RULE_param_list_opt = 11, RULE_param_list = 12, 
		RULE_param = 13, RULE_ret_type = 14, RULE_stat_seq = 15, RULE_stat = 16, 
		RULE_if_tail = 17, RULE_stat_id_tail = 18, RULE_expr_list_opt = 19, RULE_expr_list = 20, 
		RULE_lvalue = 21, RULE_lvalue_index_opt = 22, RULE_lvalue_index = 23, 
		RULE_expr = 24, RULE_or_expr = 25, RULE_and_expr = 26, RULE_comp_expr = 27, 
		RULE_comp_op = 28, RULE_add_expr = 29, RULE_add_op = 30, RULE_mul_expr = 31, 
		RULE_mul_op = 32, RULE_primary = 33, RULE_primary_id_tail = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"tiger_program", "declaration_segment", "var_declaration_list", "var_declaration", 
			"optional_init", "const_value", "id_list", "type", "type_id", "funct_declaration_list", 
			"funct_declaration", "param_list_opt", "param_list", "param", "ret_type", 
			"stat_seq", "stat", "if_tail", "stat_id_tail", "expr_list_opt", "expr_list", 
			"lvalue", "lvalue_index_opt", "lvalue_index", "expr", "or_expr", "and_expr", 
			"comp_expr", "comp_op", "add_expr", "add_op", "mul_expr", "mul_op", "primary", 
			"primary_id_tail"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'array'", "'break'", "'do'", "'if'", "'else'", "'for'", 
			"'function'", "'let'", "'in'", "'of'", "'then'", "'to'", "'var'", "'while'", 
			"'endif'", "'begin'", "'end'", "'enddo'", "'return'", "'int'", "'float'", 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", 
			"'&'", "'|'", "':='", "','", "':'", "';'", "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "ARRAY", "BREAK", "DO", "IF", "ELSE", "FOR", "FUNCTION", 
			"LET", "IN", "OF", "THEN", "TO", "VAR", "WHILE", "ENDIF", "BEGINKW", 
			"END", "ENDDO", "RETURN", "INT", "FLOAT", "PLUS", "MINUS", "MULT", "DIV", 
			"EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", "ASSIGN", "COMMA", 
			"COLON", "SEMI", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "FLOATLIT", 
			"INTLIT", "ID", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tiger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tiger_programContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(tigerParser.MAIN, 0); }
		public TerminalNode LET() { return getToken(tigerParser.LET, 0); }
		public Declaration_segmentContext declaration_segment() {
			return getRuleContext(Declaration_segmentContext.class,0);
		}
		public TerminalNode IN() { return getToken(tigerParser.IN, 0); }
		public TerminalNode BEGINKW() { return getToken(tigerParser.BEGINKW, 0); }
		public Stat_seqContext stat_seq() {
			return getRuleContext(Stat_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(tigerParser.END, 0); }
		public TerminalNode EOF() { return getToken(tigerParser.EOF, 0); }
		public Tiger_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tiger_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterTiger_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitTiger_program(this);
		}
	}

	public final Tiger_programContext tiger_program() throws RecognitionException {
		Tiger_programContext _localctx = new Tiger_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tiger_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(MAIN);
			setState(71);
			match(LET);
			setState(72);
			declaration_segment();
			setState(73);
			match(IN);
			setState(74);
			match(BEGINKW);
			setState(75);
			stat_seq();
			setState(76);
			match(END);
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_segmentContext extends ParserRuleContext {
		public Var_declaration_listContext var_declaration_list() {
			return getRuleContext(Var_declaration_listContext.class,0);
		}
		public Funct_declaration_listContext funct_declaration_list() {
			return getRuleContext(Funct_declaration_listContext.class,0);
		}
		public Declaration_segmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterDeclaration_segment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitDeclaration_segment(this);
		}
	}

	public final Declaration_segmentContext declaration_segment() throws RecognitionException {
		Declaration_segmentContext _localctx = new Declaration_segmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration_segment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			var_declaration_list();
			setState(80);
			funct_declaration_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declaration_listContext extends ParserRuleContext {
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public Var_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterVar_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitVar_declaration_list(this);
		}
	}

	public final Var_declaration_listContext var_declaration_list() throws RecognitionException {
		Var_declaration_listContext _localctx = new Var_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR) {
				{
				{
				setState(82);
				var_declaration();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(tigerParser.VAR, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Optional_initContext optional_init() {
			return getRuleContext(Optional_initContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(tigerParser.SEMI, 0); }
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitVar_declaration(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(VAR);
			setState(89);
			id_list();
			setState(90);
			match(COLON);
			setState(91);
			type();
			setState(92);
			optional_init();
			setState(93);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Optional_initContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(tigerParser.ASSIGN, 0); }
		public Const_valueContext const_value() {
			return getRuleContext(Const_valueContext.class,0);
		}
		public Optional_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterOptional_init(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitOptional_init(this);
		}
	}

	public final Optional_initContext optional_init() throws RecognitionException {
		Optional_initContext _localctx = new Optional_initContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_optional_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(95);
				match(ASSIGN);
				setState(96);
				const_value();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Const_valueContext extends ParserRuleContext {
		public TerminalNode INTLIT() { return getToken(tigerParser.INTLIT, 0); }
		public TerminalNode FLOATLIT() { return getToken(tigerParser.FLOATLIT, 0); }
		public Const_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterConst_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitConst_value(this);
		}
	}

	public final Const_valueContext const_value() throws RecognitionException {
		Const_valueContext _localctx = new Const_valueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_const_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==FLOATLIT || _la==INTLIT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_listContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(tigerParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tigerParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tigerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(tigerParser.COMMA, i);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterId_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitId_list(this);
		}
	}

	public final Id_listContext id_list() throws RecognitionException {
		Id_listContext _localctx = new Id_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ID);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(103);
				match(ID);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public Type_idContext type_id() {
			return getRuleContext(Type_idContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(tigerParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(tigerParser.LBRACK, 0); }
		public TerminalNode INTLIT() { return getToken(tigerParser.INTLIT, 0); }
		public TerminalNode RBRACK() { return getToken(tigerParser.RBRACK, 0); }
		public TerminalNode OF() { return getToken(tigerParser.OF, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				type_id();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(ARRAY);
				setState(111);
				match(LBRACK);
				setState(112);
				match(INTLIT);
				setState(113);
				match(RBRACK);
				setState(114);
				match(OF);
				setState(115);
				type_id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_idContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(tigerParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(tigerParser.FLOAT, 0); }
		public Type_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterType_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitType_id(this);
		}
	}

	public final Type_idContext type_id() throws RecognitionException {
		Type_idContext _localctx = new Type_idContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Funct_declaration_listContext extends ParserRuleContext {
		public List<Funct_declarationContext> funct_declaration() {
			return getRuleContexts(Funct_declarationContext.class);
		}
		public Funct_declarationContext funct_declaration(int i) {
			return getRuleContext(Funct_declarationContext.class,i);
		}
		public Funct_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterFunct_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitFunct_declaration_list(this);
		}
	}

	public final Funct_declaration_listContext funct_declaration_list() throws RecognitionException {
		Funct_declaration_listContext _localctx = new Funct_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funct_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(120);
				funct_declaration();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Funct_declarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(tigerParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(tigerParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(tigerParser.LPAREN, 0); }
		public Param_list_optContext param_list_opt() {
			return getRuleContext(Param_list_optContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(tigerParser.RPAREN, 0); }
		public Ret_typeContext ret_type() {
			return getRuleContext(Ret_typeContext.class,0);
		}
		public TerminalNode BEGINKW() { return getToken(tigerParser.BEGINKW, 0); }
		public Stat_seqContext stat_seq() {
			return getRuleContext(Stat_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(tigerParser.END, 0); }
		public Funct_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterFunct_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitFunct_declaration(this);
		}
	}

	public final Funct_declarationContext funct_declaration() throws RecognitionException {
		Funct_declarationContext _localctx = new Funct_declarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_funct_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(FUNCTION);
			setState(127);
			match(ID);
			setState(128);
			match(LPAREN);
			setState(129);
			param_list_opt();
			setState(130);
			match(RPAREN);
			setState(131);
			ret_type();
			setState(132);
			match(BEGINKW);
			setState(133);
			stat_seq();
			setState(134);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_list_optContext extends ParserRuleContext {
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public Param_list_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list_opt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterParam_list_opt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitParam_list_opt(this);
		}
	}

	public final Param_list_optContext param_list_opt() throws RecognitionException {
		Param_list_optContext _localctx = new Param_list_optContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_param_list_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(136);
				param_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_listContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tigerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(tigerParser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitParam_list(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			param();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(140);
				match(COMMA);
				setState(141);
				param();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tigerParser.ID, 0); }
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(ID);
			setState(148);
			match(COLON);
			setState(149);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ret_typeContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(tigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Ret_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).enterRet_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tigerListener ) ((tigerListener)listener).exitRet_type(this);
		}
	}
